--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <label for="email">email</label>
       <input type="text" id="email" />
       <button>Submit</button>
-      <a target="_blank" href="https://youtube.com/">my link</a>
-      <a target="_blank" href="http.youtube.com"> </a></form>
+      <a target="_blank" href="https://www.youtube.com/@opmido1331">my link</a>
+      
     
 </html>
